--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -1,82 +1,93 @@
 @import 'required';
+@import '3rd_party/icomoon';
 
 * {-webkit-font-smoothing:antialiased;}
 html, body {height:100%;font-size:$font-size-base;}
 html.no-scroll {overflow:hidden;}
-input, textarea, button, a {&:focus, &:active {outline:0 !important;@include box-shadow(none !important);}}
-a, a:hover, a:active {cursor:pointer;text-decoration:none;}
-h3,h4,h5 {
-  &:first-of-type {margin-top:0;}
-}
-img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
-.tabular {width:100%;height:100%;display:table;
-  .cellular {width:100%;height:100%;display:table-cell;vertical-align:middle;text-align:center;
-    &.text-left {text-align:left;}
-    &.text-right {text-align:right;}
+
+// Page wrapper
+#c-level-1 {height:100%;
+
+  input, textarea, button, a {&:focus, &:active {outline:0 !important;@include box-shadow(none !important);}}
+  a, a:hover, a:active {cursor:pointer;text-decoration:none;}
+  h3,h4,h5 {
+    &:first-of-type {margin-top:0;}
   }
-}
-
-.text-orange {color:$theme-orange;}
-
-.anglified {
-  p::before {content:'>\0000a0';color:$theme-orange;}
-}
-
-.iconified {position:relative;padding-bottom:2rem;margin-left:1rem;
-  &::before {content: "\f140";font-family:$font-family-icomoon;position:absolute;right:100%;top:0;margin-right:5px;display:inline-block;color:$theme-orange;font-size:150%;line-height:1;}
-  h4 {color:$theme-orange;margin:0 0 0.3rem;}
-}
-
-.statistic {text-align:center;
-  b {font-size:420%;display:block;font-weight:100;line-height:1;letter-spacing:-1px;}
-}
-
-aside[scroll-top]{color:#fff;font-size:2rem;position:fixed;bottom:-100%;right:10px;display:inline-block;line-height:1;background:rgba(0,0,0,0.45);cursor:pointer;z-index:9;@include transition(bottom 0.25s ease);
-  &:hover {background:rgba($theme-orange,0.85);}
-  &.visible {bottom:10px;}
-}
-
-.gutter-pad,
-.gutter-pad-2x {padding:0 ($grid-gutter-width/2);}
-
-// For sidebar navigation on mobile
-[slideable]{@include transform(translateX(0));@include transition(all 0.25s ease);}
-
-main {height:100%;width:100%;position:relative;}
-
-/**********************************************************************
-Page Sections!
-**********************************************************************/
-section {padding:($grid-gutter-width * 2) 0;overflow:hidden;
-  &:first-of-type {padding:0;height:100%;width:100%;position:relative;}
-  h2 {text-align:center;margin:0;padding:2rem 1rem 3rem;text-transform:uppercase;}
-  &[parallax] {background-size:cover;background-position:50% 100%;background-attachment:fixed;}
-  &.boxd-orange {background:$theme-orange;color:#000;}
-  &.boxd-gray {background:$theme-gray-dark;color:$theme-gray-light;}
-}
-
-footer {font-size:14px;display:block;text-align:center;padding:0.5rem;}
-
-@import '3rd_party/icomoon';
-@import 'elements/header_and_nav';
-@import 'elements/accordion';
-@import 'elements/masthead';
-@import 'elements/modal-window';
-@import 'elements/quote-cycle';
-@import 'elements/isotope';
-
-@media screen and (min-width:$screen-sm){
-  .gutter-pad-2x {padding:0 $grid-gutter-width;}
-  .iconified {margin-left:0;}
-
-  form {
-    .col-sm-6 {
-      &:nth-child(1){padding-right:($grid-gutter-width/4);}
-      &:nth-child(2){padding-left:($grid-gutter-width/4);}
+  img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
+  .tabular {width:100%;height:100%;display:table;
+    .cellular {width:100%;height:100%;display:table-cell;vertical-align:middle;text-align:center;
+      &.text-left {text-align:left;}
+      &.text-right {text-align:right;}
     }
   }
+
+  .text-orange {color:$theme-orange;}
+
+  .anglified {
+    p::before {content:'>\0000a0';color:$theme-orange;}
+  }
+
+  .iconified {position:relative;padding-bottom:2rem;margin-left:1rem;
+    &::before {content: "\f140";font-family:$font-family-icomoon;position:absolute;right:100%;top:0;margin-right:5px;display:inline-block;color:$theme-orange;font-size:150%;line-height:1;}
+    h4 {color:$theme-orange;margin:0 0 0.3rem;}
+  }
+
+  .statistic {text-align:center;
+    b {font-size:420%;display:block;font-weight:100;line-height:1;letter-spacing:-1px;}
+  }
+
+  aside[scroll-top]{color:#fff;font-size:2rem;position:fixed;bottom:-100%;right:10px;display:inline-block;line-height:1;background:rgba(0,0,0,0.45);cursor:pointer;z-index:9;@include transition(bottom 0.25s ease);
+    &:hover {background:rgba($theme-orange,0.85);}
+    &.visible {bottom:10px;}
+  }
+
+  .gutter-pad,
+  .gutter-pad-2x {padding:0 ($grid-gutter-width/2);}
+
+  // For sidebar navigation on mobile
+  [slideable]{@include transform(translateX(0));@include transition(all 0.25s ease);}
+
+  main {height:100%;width:100%;position:relative;}
+
+  /**********************************************************************
+  Page Sections!
+  **********************************************************************/
+  section {padding:($grid-gutter-width * 2) 0;overflow:hidden;
+    &:first-of-type {padding:0;height:100%;width:100%;position:relative;}
+    h2 {text-align:center;margin:0;padding:2rem 1rem 3rem;text-transform:uppercase;}
+    &[parallax] {background-size:cover;background-position:50% 100%;background-attachment:fixed;}
+    &.boxd-orange {background:$theme-orange;color:#000;}
+    &.boxd-gray {background:$theme-gray-dark;color:$theme-gray-light;}
+  }
+
+  footer {font-size:14px;display:block;text-align:center;padding:0.5rem;}
+
+  @import 'elements/header_and_nav';
+  @import 'elements/accordion';
+  @import 'elements/masthead';
+  @import 'elements/modal-window';
+  @import 'elements/quote-cycle';
+  @import 'elements/isotope';
+
+  @media screen and (min-width:$screen-sm){
+    .gutter-pad-2x {padding:0 $grid-gutter-width;}
+    .iconified {margin-left:0;}
+
+    form {
+      .col-sm-6 {
+        &:nth-child(1){padding-right:($grid-gutter-width/4);}
+        &:nth-child(2){padding-left:($grid-gutter-width/4);}
+      }
+    }
+  }
+
 }
 
-.cms-admin {
-  header {top:49px;}
+/**
+ * Edit mode
+ */
+.ccm-toolbar-visible {
+  #c-level-1 {
+    header {top:49px;}
+  }
 }
