--- a/web/packages/sequence/css/src/elements/isotope.scss
+++ b/web/packages/sequence/css/src/elements/isotope.scss
@@ -1,4 +1,4 @@
-[isotope]{margin-bottom:-($grid-gutter-width * 2);}
+[isotope]{margin-bottom:-$section-vertical-spacing;}
 
 [isotope-filters]{margin-bottom:1rem;
   li {padding:0.5rem 0.75rem;
