--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -37,11 +37,6 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
     p:first-of-type {font-size:420%;display:block;font-weight:100;line-height:1;letter-spacing:-1px;}
   }
 
-  aside[scroll-top]{color:#fff;font-size:2rem;position:fixed;bottom:-100%;right:10px;display:inline-block;line-height:1;background:rgba(0,0,0,0.45);cursor:pointer;z-index:9;@include transition(bottom 0.25s ease);
-    &:hover {background:rgba($theme-orange,0.85);}
-    &.visible {bottom:10px;}
-  }
-
   // For sidebar navigation on mobile
   [slideable]{@include transform(translateX(0));@include transition(all 0.25s ease);}
 
@@ -51,16 +46,20 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
   Page Sections!
   **********************************************************************/
   section {padding:$section-vertical-spacing 0;overflow:hidden;
-    //&:first-of-type {padding-top:$section-vertical-spacing * 2;}
-    //&:first-of-type {padding:0;height:100%;width:100%;position:relative;}
+    &:first-of-type {padding:0;height:100%;width:100%;position:relative;}
     h2 {text-align:center;margin:0;padding:2rem 1rem 3rem;text-transform:uppercase;}
     [class*="wrap-"]{margin:-$section-vertical-spacing 0;padding:$section-vertical-spacing 0;}
-    .wrap-parallax {background-size:cover;background-position:50% 100%;background-attachment:fixed;}
-    .wrap-orange {background:$theme-orange;color:#000;}
-    .wrap-gray {background:$theme-gray-dark;color:$theme-gray-light;}
+    .wrap-parallax {color:#fff;background-size:cover;background-position:50% 100%;background-attachment:fixed;}
+    .wrap-orange {color:#000;background:$theme-orange;}
+    .wrap-gray {color:$theme-gray-light;background:$theme-gray-dark;}
   }
 
   footer {font-size:14px;display:block;text-align:center;padding:0.5rem;}
+
+  aside[scroll-top]{color:#fff;font-size:2rem;position:fixed;bottom:-100%;right:10px;display:inline-block;line-height:1;background:rgba(0,0,0,0.45);cursor:pointer;z-index:9;@include transition(bottom 0.25s ease);
+    &:hover {background:rgba($theme-orange,0.85);}
+    &.visible {bottom:10px;}
+  }
 
   @import 'elements/header_and_nav';
   @import 'elements/accordion';
@@ -70,23 +69,26 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 
 }
 
+// > screen-sm
 @media screen and (min-width:$screen-sm){
   #c-level-1 {
     form {
       .col-sm-6 {
-        &:nth-child(1){padding-right:($grid-gutter-width/4);}
-        &:nth-child(2){padding-left:($grid-gutter-width/4);}
+        &:nth-child(1){padding-right:(($grid-gutter-width/4)/2);}
+        &:nth-child(2){padding-left:(($grid-gutter-width/4)/2);}
       }
     }
   }
 }
 
+// > screen-md
 @media screen and (min-width:$screen-md){
   #c-level-1 {
     .iconified {margin-left:($grid-gutter-width / 4);padding-right:($grid-gutter-width / 4);}
   }
 }
 
+// Sidebar nav
 @media screen and (max-width:$screen-sm){
   html.sidebar-nav {
     #c-level-1 {
@@ -97,7 +99,7 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 }
 
 /**
- * Edit mode
+ * When Logged In
  */
 .ccm-toolbar-visible {
   #c-level-1 {
@@ -105,8 +107,13 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
   }
 }
 
+/**
+ * When In Edit Mode
+ */
 html.cms-edit-mode {
   #c-level-1 {
+    [masthead] .node .node-content {max-width:85%;min-width:500px;width:auto;}
+
     section {overflow:visible;
       [data-area-handle*="Main"]:not([data-area-handle*=":"]) {margin:-$section-vertical-spacing 0;padding:$section-vertical-spacing 0;}
       .ccm-block-edit-layout {padding:($grid-gutter-width/4);
