--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -22,7 +22,7 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
     }
   }
 
-  .text-orange {color:$theme-orange;}
+  //.text-orange {color:$theme-orange;} "highlight-color"
 
   .anglified {
     p::before {content:'>\0000a0';color:$theme-orange;}
@@ -30,7 +30,8 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 
   .iconified {position:relative;padding-bottom:2rem;padding-left:($grid-gutter-width / 4);
     &::before {content: "\f140";font-family:$font-family-icomoon;position:absolute;left:0;top:0;display:inline-block;color:$theme-orange;font-size:150%;line-height:1;@include transform(translateX(-50%));}
-    h4 {color:$theme-orange;margin:0 0 0.3rem;}
+    h2,h3,h4,h5 {margin:0 0 0.5rem;}
+    //h4 {color:$theme-orange;margin:0 0 0.3rem;}
   }
 
   .countable {text-align:center;
@@ -49,9 +50,10 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
     &:first-of-type {padding:0;height:100%;width:100%;position:relative;}
     h2 {text-align:center;margin:0;padding:2rem 1rem 3rem;text-transform:uppercase;}
     [class*="wrap-"]{margin:-$section-vertical-spacing 0;padding:$section-vertical-spacing 0;}
-    .wrap-parallax {color:#fff;background-size:cover;background-position:50% 100%;background-attachment:fixed;}
-    .wrap-orange {color:#000;background:$theme-orange;}
-    .wrap-gray {color:$theme-gray-light;background:$theme-gray-dark;}
+    .wrap-unstyled {/* no styles; handled via the CMS! */}
+    .wrap-parallax {/*color:#fff;*/background-size:cover;background-position:50% 100%;background-attachment:fixed;}
+    .wrap-orange {/*color:#000;*/background:$theme-orange;}
+    .wrap-gray {/*color:$theme-gray-light;*/background:$theme-gray-dark;}
   }
 
   footer {font-size:14px;display:block;text-align:center;padding:0.5rem;}
