--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -43,6 +43,9 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 
   main {height:100%;width:100%;position:relative;}
 
+  // Temporary; override in the CMS w/ custom CSS to show
+  #people, #contact {display:none;}
+
   /**********************************************************************
   Page Sections!
   **********************************************************************/
@@ -56,7 +59,7 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
     .wrap-gray {/*color:$theme-gray-light;*/background:$theme-gray-dark;}
   }
 
-  footer {font-size:14px;display:block;text-align:center;padding:0.5rem;}
+  footer {font-size:14px;display:block;text-align:center;padding:1rem;}
 
   aside[scroll-top]{color:#fff;font-size:2rem;position:fixed;bottom:-100%;right:10px;display:inline-block;line-height:1;background:rgba(0,0,0,0.45);cursor:pointer;z-index:9;@include transition(bottom 0.25s ease);
     &:hover {background:rgba($theme-orange,0.85);}
@@ -114,6 +117,8 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
  */
 html.cms-edit-mode {
   #c-level-1 {
+    header figure {max-width:50%;}
+
     [masthead] .node .node-content {max-width:85%;min-width:500px;width:auto;}
 
     section {overflow:visible;
