--- a/web/packages/sequence/themes/sequence/css/presets/defaults.less
+++ b/web/packages/sequence/themes/sequence/css/presets/defaults.less
@@ -12,7 +12,7 @@
 @body-type-type-font-size:          16px;
 
 // Header
-@header-background-color:           #222222;
+@header-background-color:           rgba(red(#222222), green(#222222), blue(#222222), 0.85);
 @header-type-type-font-family:      'Ropa Sans';
 @header-type-type-font-weight:      100;
 @header-type-type-text-transform:   'none';
