--- a/web/packages/sequence/themes/sequence/css/theme.less
+++ b/web/packages/sequence/themes/sequence/css/theme.less
@@ -64,6 +64,10 @@ body {
     .highlight-color {
       color:@highlight-color;
     }
+
+    .anglified::before {
+      color:@highlight-color;
+    }
   }
 }
 
