--- a/web/packages/sequence/css/src/elements/quote-cycle.scss
+++ b/web/packages/sequence/css/src/elements/quote-cycle.scss
@@ -2,6 +2,7 @@
   .group {position:absolute;top:0;left:0;visibility:hidden;opacity:0;
     &:first-of-type {position:relative;visibility:visible;opacity:1;}
     q {display:block;font-style:italic;padding-bottom:1rem;
+      p {display:inline;}
       &::before, &::after {font-size:150%;line-height:0;position:relative;top:6px;}
     }
     cite {display:block;color:$theme-orange;}
